[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Pixellari.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://audio/sounds/UI/selected2.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/sounds/UI/select.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/Environment/grot.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
light_mask = 0
anchor_left = 0.00123873
anchor_right = 1.00124
anchor_bottom = 1.0
margin_left = 0.594604
margin_right = 0.594604
focus_mode = 2
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 249.064, 131.908 )
scale = Vector2( 10, 6 )
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
margin_left = 109.976
margin_top = 54.3403
margin_right = 388.976
margin_bottom = 102.34
custom_fonts/font = SubResource( 1 )
text = "PAUSE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 173.0
margin_top = 103.5
margin_right = 329.0
margin_bottom = 206.5
mouse_filter = 2
mouse_default_cursor_shape = 2
custom_constants/separation = 10
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="Buttons"]
margin_right = 156.0
margin_bottom = 26.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../RestartButton")
focus_next = NodePath("../RestartButton")
focus_previous = NodePath("../ExitButton")
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
action_mode = 0
keep_pressed_outside = true
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="Buttons"]
margin_top = 36.0
margin_right = 156.0
margin_bottom = 62.0
focus_neighbour_top = NodePath("../ContinueButton")
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../ContinueButton")
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "Restart Level"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Buttons"]
margin_top = 72.0
margin_right = 156.0
margin_bottom = 98.0
focus_neighbour_top = NodePath("../RestartButton")
focus_neighbour_bottom = NodePath("../ContinueButton")
focus_next = NodePath("../ContinueButton")
focus_previous = NodePath("../RestartButton")
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "Main Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlipSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="SelectedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0
[connection signal="focus_entered" from="Buttons/ContinueButton" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="focus_entered" from="Buttons/RestartButton" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="focus_entered" from="Buttons/ExitButton" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
